--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,183 @@
     --color1: #deb37e;
     --color2: #7f7770;
     --b: #000;
-    --w: #fff:
+    --w: #ffffff;
     --pfs: 16px;
 }
-
+*,*::after,*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.container{
+    margin: 0 auto;
+    width: 90%;
+}
+ul{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+}
+/*Header start*/
 .header{
     height: 100vh;
     background-image: url('./../img/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: 60%;
+    background-position-y: 50%;
+    position: relative;
+    overflow: hidden;
 }
 .nav{
     width: 100%;
     background-image: url('./../img/Shape-top.png');
     background-repeat: no-repeat;
-    background-size: 120%;
-    background-position: -10% ;
+    background-size: 105%;
+    background-position: 40% 100% ;
+    display: flex;
+    height: 170px;
+    padding: 10px 50px;
+}
+.logo{
+    flex-grow: 3;
+    margin: 20px 0 0 50px;
+}
+.logo_img{
+    width: 70px;
+}
+.navbar{
+    display: flex;
+    flex-grow: 3;
+    flex-direction: row-reverse;
+}
+.nav_item{
+    padding: 10px;
+    margin: 10px;
+    font-size: 20px;
+}
+.nav_link{
+    color: var(--b);
+    text-transform: uppercase;
+}
+.nav_link:hover{
+    color: var(--color1);
+    text-transform: uppercase;
+    transform: 0.7s;
+}
+.search{
+    display: flex;
+    flex-grow: 1;
+    position: relative;
+    margin-top: 10px;
+    height: 50px;
+    flex-direction: row-reverse;
+}
+.search_input{
+    width: 70%;
+    background-color: #7f77702d;
+    border-radius: 50px;
+    height: 100%;
+    border: none;
+}
+.search_icon{
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.heading , .sub_heading{
+    font-size: 80px;
+    color: var(--color1);
+    text-transform: uppercase;
+    font-weight: 900;
+}
+.heading_content{
+    padding: 200px;
+}
+.sub_heading1{
+    font-size: 25px;
+}
+.header_btn{
+    border: none;
+    background-color: var(--w);
+    height: 60px;
+    width: 150px;
+    font-size: 20px;
+    opacity: .7;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.6s;
+    margin-top: 40px;
+}
+.header_btn:hover{
+    background-color: var(--color1) ;
+}
+.header_para{
+    width: 500px;
+}
+.shade_buttom{
+    position: absolute;
+    background-image: url(./../img/Shape-bot.png);
+    height: 100px;
+    width: 100%;
+    background-repeat: no-repeat;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(2.4);
+}
+/*Header End*/
+/* Start LETS GO section*/
+.letsgo_heading{
+    font-size: 50px;
+    color: var(--color1);
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+}
+.letsgo_subp{
+    opacity: 0.8;
+    width: 600px;
+    text-align: center;
+    margin: 0 auto;
+}
+.articles{
+    display: flex;
+    justify-content: space-between;
+}
+.article{
+    width: 30%;
+}
+.article_img , .article_img img{
+    width: 100%;
+    display: block;
+}
+.article_content{
+    padding: 30px 10px;
+    background-color: var(--color2);
+    color: var(--w);
+}
+.article_content h3{
+    font-size: 20px;
+    font-weight: 900;
+}
+.letsgo_btn{
+    border: none;
+    background-color: var(--color2);
+    height: 60px;
+    width: 150px;
+    font-size: 20px;
+    opacity: .7;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.6s;
+    color: var(--w);
+    display: block;
+    margin: 40px auto;
+}
+.letsgo_btn:hover{
+    background-color: var(--color1) ;
 }
